--- a/GrpcClientService/UserDetailsGrpcClient/UserDetailsGrpcClient.csproj
+++ b/GrpcClientService/UserDetailsGrpcClient/UserDetailsGrpcClient.csproj
@@ -6,9 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    
     <PackageReference Include="Google.Protobuf" Version="3.11.4" />
     <PackageReference Include="Grpc.Net.Client" Version="2.28.0" />
     <PackageReference Include="Grpc.Tools" Version="2.28.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.36.1.44192">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
