--- a/GrpcClientService/UserDetailsGrpcService/UserDetailsGrpcService.csproj
+++ b/GrpcClientService/UserDetailsGrpcService/UserDetailsGrpcService.csproj
@@ -10,6 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.36.1.44192">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
